--- a/src/app/dashboard-layout/dashboard-layout.component.css
+++ b/src/app/dashboard-layout/dashboard-layout.component.css
@@ -16,6 +16,9 @@ md-list-item {
   border-left: 6px solid;
   border-color: #483D8B;
 }
+.menuBar:focus {
+  border: 6px solid lightgray;
+}
 
 .closeSide {
   font-family: 'Nunito', sans-serif;
