fixed package.json to include bootstrap

--- a/src/app/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/dashboard-layout/dashboard-layout.component.html
@@ -61,10 +61,9 @@
         </div>
       </div>
   </md-toolbar>
+
+
   <div>
-    <md-card style="width:50%;">
-      <app-calendar></app-calendar>
-    </md-card>
     <md-card style="width:50%;">
       <app-calendar></app-calendar>
     </md-card>
@@ -72,17 +71,7 @@
 
   <md-grid-list cols="4" rowHeight="100px">
     <md-grid-tile [colspan]="2" [rowspan]="5">
-      <md-card>
-        <app-calendar></app-calendar>
-      </md-card>
-    </md-grid-tile>
-    <md-grid-tile class="calendar" [colspan]="1" [rowspan]="5"  style="display:flex">
-        <md-card>
-          hey
-        </md-card>
-        <md-card>
-          hey
-        </md-card>
+      the health bar
     </md-grid-tile>
   </md-grid-list>
 
