added the health bar

--- a/src/app/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/dashboard-layout/dashboard-layout.component.html
@@ -64,8 +64,14 @@
 
 
   <div>
-    <md-card style="width:50%;">
+    <md-card>
       <app-calendar></app-calendar>
+    </md-card>
+  </div>
+  <div class="healthbar-widget">
+    <md-card>
+      <md-card-title>Health Bar</md-card-title>
+      <app-healthbar></app-healthbar>
     </md-card>
   </div>
 
